Change zipcode UI

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -764,6 +764,15 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Zipcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="6ff-7r-pKx">
+                                <rect key="frame" x="16" y="197" width="568" height="81"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="81" id="x6H-qm-vud"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zipcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4C-Nz-fDu">
                                 <rect key="frame" x="16" y="161" width="568" height="28"/>
                                 <constraints>
@@ -773,19 +782,71 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gee-2Z-cyh">
+                                <rect key="frame" x="217" y="384" width="166" height="36"/>
+                                <color key="backgroundColor" red="0.2666666667" green="0.70588235290000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="166" id="YBN-8g-3c7"/>
+                                    <constraint firstAttribute="height" constant="36" id="i63-Aa-01i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Change">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addZipcode:" destination="oPN-vH-9a3" eventType="touchUpInside" id="Whl-YN-yob"/>
+                                    <action selector="changeZipcode:" destination="t5j-sO-O35" eventType="touchUpInside" id="ElH-51-3fh"/>
+                                    <action selector="requestButton:" destination="ahG-z7-Thp" eventType="touchUpInside" id="5Hi-vY-xSL"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Zipcode" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B0P-1Z-AK9">
+                                <rect key="frame" x="217" y="285" width="166" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="c6c-d6-eiy"/>
+                                    <constraint firstAttribute="width" constant="166" id="ftE-3A-0c0"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIy-Ys-wAd">
+                                <rect key="frame" x="217" y="313" width="166" height="2"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="166" id="Wes-DV-xy7"/>
+                                    <constraint firstAttribute="height" constant="2" id="kRU-4z-jVx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="B0P-1Z-AK9" firstAttribute="leading" secondItem="nIy-Ys-wAd" secondAttribute="leading" id="0r0-0N-Xzo"/>
+                            <constraint firstItem="gee-2Z-cyh" firstAttribute="top" secondItem="B0P-1Z-AK9" secondAttribute="bottom" constant="69" id="1HR-km-vJ4"/>
+                            <constraint firstAttribute="centerX" secondItem="gee-2Z-cyh" secondAttribute="centerX" id="6t4-ZE-LHI"/>
                             <constraint firstItem="B4C-Nz-fDu" firstAttribute="leading" secondItem="Mw3-ym-Ljf" secondAttribute="leadingMargin" id="Fhb-xx-esi"/>
                             <constraint firstItem="6sG-IK-jvp" firstAttribute="top" secondItem="a9Y-cb-7Cj" secondAttribute="bottom" constant="8" id="II6-yf-AX8"/>
+                            <constraint firstItem="6ff-7r-pKx" firstAttribute="trailing" secondItem="Mw3-ym-Ljf" secondAttribute="trailingMargin" id="KHo-i9-zt2"/>
+                            <constraint firstItem="B0P-1Z-AK9" firstAttribute="trailing" secondItem="nIy-Ys-wAd" secondAttribute="trailing" id="Luu-wn-ova"/>
                             <constraint firstItem="B4C-Nz-fDu" firstAttribute="top" secondItem="6sG-IK-jvp" secondAttribute="bottom" constant="8" id="MYL-t1-J65"/>
                             <constraint firstItem="6sG-IK-jvp" firstAttribute="leading" secondItem="Mw3-ym-Ljf" secondAttribute="leadingMargin" id="O4U-8O-c9n"/>
+                            <constraint firstItem="6ff-7r-pKx" firstAttribute="top" secondItem="B4C-Nz-fDu" secondAttribute="bottom" constant="8" id="R7q-hA-3Wb"/>
+                            <constraint firstItem="B0P-1Z-AK9" firstAttribute="top" secondItem="B4C-Nz-fDu" secondAttribute="bottom" constant="96" id="c2G-k9-Nbb"/>
+                            <constraint firstAttribute="centerX" secondItem="B0P-1Z-AK9" secondAttribute="centerX" id="cu4-BM-m9b"/>
+                            <constraint firstItem="6ff-7r-pKx" firstAttribute="leading" secondItem="Mw3-ym-Ljf" secondAttribute="leadingMargin" id="jsh-l2-5aV"/>
                             <constraint firstItem="B4C-Nz-fDu" firstAttribute="trailing" secondItem="Mw3-ym-Ljf" secondAttribute="trailingMargin" id="nW5-GQ-ODk"/>
+                            <constraint firstAttribute="centerX" secondItem="6ff-7r-pKx" secondAttribute="centerX" id="wkm-U0-oVp"/>
+                            <constraint firstItem="nIy-Ys-wAd" firstAttribute="bottom" secondItem="B0P-1Z-AK9" secondAttribute="bottom" id="yAF-0Z-4hy"/>
                             <constraint firstItem="6sG-IK-jvp" firstAttribute="trailing" secondItem="Mw3-ym-Ljf" secondAttribute="trailingMargin" id="zV7-FJ-UK9"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="changeButtonOutlet" destination="gee-2Z-cyh" id="SiH-YA-kEe"/>
                         <outlet property="zipcodeOutlet" destination="B4C-Nz-fDu" id="NGg-5B-4sH"/>
+                        <outlet property="zipcodeTextField" destination="B0P-1Z-AK9" id="JNB-I1-4cG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JI0-7S-yhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1404,6 +1465,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="A9u-F2-sNF"/>
-        <segue reference="rJU-rD-EcA"/>
+        <segue reference="OKq-df-Zzw"/>
     </inferredMetricsTieBreakers>
 </document>
